--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,12 @@ jobs:
         with:
           deno-version: vx.x.x
 
+      - name: Run tests
+        run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} deno task test
+
+      - name: Generate report
+        run: deno task coverage
+
       - name: Run Build
         run: GITHUB_CLIENT_ID=${{ vars.GH_CLIENT_ID }} GITHUB_CLIENT_SECRET=${{ secrets.GH_CLIENT_SECRET }} deno task build
 
