--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: vx.x.x
+          deno-version: 2.0.0-rc.1
 
       - name: Run tests
         run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} deno task test
