--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: vx.x.x
+          deno-version: 2.0.0-rc.1
 
       - run: deno lint --unstable-kv core
       - run: deno lint --unstable-kv examples
