--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -72,7 +72,7 @@ jobs:
 
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: vx.x.x
+          deno-version: 2.0.0-rc.1
 
       - name: Install Oha
         uses: baptiste0928/cargo-install@v1
