--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,7 @@
   },
   "imports": {
     "@app/": "./",
-    "preact": "npm:preact@^10.24.1",
-    "prismjs": "npm:prismjs@^1.29.0"
+    "preact": "npm:preact@^10.24.1"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
