--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - uses: denoland/setup-deno@v2
         with:
-          deno-version: 2.0.0-rc.10
+          deno-version: 2.0.0
 
       - run: deno lint --unstable-kv core
       - run: deno lint --unstable-kv examples
