feat: add websocket

--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,8 @@
   },
   "imports": {
     "@app/": "./",
-    "preact": "npm:preact@^10.24.2"
+    "preact": "https://esm.sh/preact@10.24.2",
+    "preact/": "https://esm.sh/preact@10.24.2/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
