--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Fastro",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#000000",
+    "background_color": "#1b1f23",
     "theme_color": "#ffffff",
     "description": "Web-Based Messaging Application",
     "icons": [
