--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,14 +8,31 @@
     "description": "Web-Based Messaging Application",
     "icons": [
         {
+            "src": "/icons/favicon.ico",
+            "type": "image/x-icon",
+            "sizes": "16x16 32x32"
+        },
+        {
             "src": "/icons/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "sizes": "192x192"
         },
         {
             "src": "/icons/icon-512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        },
+        {
+            "src": "/icons/icon-192-maskable.png",
+            "type": "image/png",
+            "sizes": "192x192",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icons/icon-512-maskable.png",
+            "type": "image/png",
             "sizes": "512x512",
-            "type": "image/png"
+            "purpose": "maskable"
         }
     ],
     "scope": "/"
