fix: github to kv

--- a/deno.json
+++ b/deno.json
@@ -51,6 +51,7 @@
     "app_middleware": "deno run -A examples/app_middleware.ts",
     "route_middleware": "deno run -A examples/route_middleware.ts",
     "server_rendering": "deno run -A examples/server_rendering.tsx",
-    "store": "deno run -A --env examples/store.ts"
+    "store": "deno run -A --env examples/store.ts",
+    "kv": "deno run --unstable-kv utils/kv.ts"
   }
 }
