--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,9 @@
   },
   "imports": {
     "@app/": "./",
-    "preact": "https://esm.sh/preact@10.25.0",
-    "preact/": "https://esm.sh/preact@10.25.0/"
+    "preact": "npm:preact@^10.25.0",
+    "@preact/signals": "npm:@preact/signals@^1.2.3",
+    "preact-render-to-string": "npm:preact-render-to-string@^6.5.11"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
@@ -21,7 +22,7 @@
   },
   "nodeModulesDir": "auto",
   "tasks": {
-    "start": "ENV=DEVELOPMENT deno run --env --unstable-kv -A --watch modules/app/main.ts --debug",
+    "start": "ENV=DEVELOPMENT deno run -r --env --unstable-kv -A --watch modules/app/main.ts --debug",
     "build": "deno run --env -A --unstable-kv  modules/app/main.ts --build ",
     "prod": "deno run --env --unstable-kv -A modules/app/main.ts",
     "test": "rm -rf .hydrate && rm -rf cov && deno test --env --unstable-kv -A --coverage=cov && deno coverage cov",
