--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: fastro
-          entrypoint: modules/app/main.ts
+          entrypoint: modules/app/wait.ts
