refactor(landing-page): update manifest.json

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Fastro Messenger",
+  "name": "Fastro Solutions",
   "short_name": "Fastro",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1b1f23",
   "theme_color": "#000000",
-  "description": "Web-Based Messaging Application",
+  "description": "Fastro Solutions",
   "icons": [
     {
       "src": "/icons/favicon.ico",
