--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -72,7 +72,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: 2.1.2
+          deno-version: v2.x
 
       - name: Install Oha
         uses: baptiste0928/cargo-install@v1
