--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: 2.1.2
+          deno-version: v2.x
 
       - name: Run tests
         run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} deno task test
