--- a/deno.json
+++ b/deno.json
@@ -12,10 +12,10 @@
   },
   "imports": {
     "@app/": "./",
-    "preact": "npm:preact@^10.26.9",
+    "preact": "npm:preact@^10.27.2",
     "@preact/signals": "npm:@preact/signals@^2.0.1",
     "preact-render-to-string": "npm:preact-render-to-string@^6.5.13",
-    "preact/jsx-runtime": "npm:preact@10.26.9/jsx-runtime",
+    "preact/jsx-runtime": "npm:preact@^10.27.2/jsx-runtime",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@0.5.16",
     "tailwind-scrollbar": "npm:tailwind-scrollbar@^3.1.0",
     "google-cloud/storage": "npm:@google-cloud/storage@^7.16.0"
@@ -37,7 +37,6 @@
     "deno": "deno run -A examples/deno.ts",
     "hook": "deno run -A examples/hook.ts",
     "raw_json": "deno run -A examples/raw_json.ts",
-    "raw_jsx": "deno run -A examples/raw_jsx.tsx",
     "raw_string": "deno run -A examples/raw_string.ts",
     "ctx_json": "deno run -A examples/ctx_json.ts",
     "ctx_jsx": "deno run -A examples/ctx_jsx.tsx",
