--- a/deno.json
+++ b/deno.json
@@ -14,7 +14,9 @@
     "react": "npm:react@^19.2.4",
     "react/jsx-runtime": "npm:react@^19.2.4/jsx-runtime",
     "react/jsx-dev-runtime": "npm:react@^19.2.4/jsx-dev-runtime",
-    "react-dom": "npm:react-dom@^19.2.4"
+    "react-dom": "npm:react-dom@^19.2.4",
+    "@std/testing": "jsr:@std/testing@^1.0.16",
+    "@std/assert": "jsr:@std/assert@^1.0.16"
   },
   "compilerOptions": {
     "lib": [
@@ -34,6 +36,8 @@
   "nodeModulesDir": "auto",
   "tasks": {
     "dev": "deno run -A --watch=static/,routes/,core/ --env --unstable-kv main.ts 3000",
-    "start": "ENV=production deno run -A --env --unstable-kv main.ts 3000"
+    "start": "ENV=production deno run -A --env --unstable-kv main.ts 3000",
+    "test": "deno test --allow-net --allow-read --allow-write core/*.test.ts",
+    "cov": "rm -rf cov_profile && deno test --allow-net --allow-read --allow-write --coverage=cov_profile core/*.test.ts && deno coverage cov_profile --include=\"core/\" && rm -rf cov_profile"
   }
 }
