--- a/deno.json
+++ b/deno.json
@@ -35,8 +35,8 @@
   },
   "nodeModulesDir": "auto",
   "tasks": {
-    "dev": "deno run -A --watch=static/,routes/,core/ --env --unstable-kv main.ts 3000",
-    "start": "ENV=production deno run -A --env --unstable-kv main.ts 3000",
+    "dev": "deno run -A --watch --env modules/app/main.ts 3000",
+    "start": "deno run -A --env main.ts 3000",
     "test": "bash ./scripts/test.sh",
     "cov": "bash ./scripts/test.sh --coverage",
     "bench": "./run_bench.sh"
