--- a/deno.json
+++ b/deno.json
@@ -16,7 +16,8 @@
     "react/jsx-dev-runtime": "npm:react@^19.2.4/jsx-dev-runtime",
     "react-dom": "npm:react-dom@^19.2.4",
     "@std/testing": "jsr:@std/testing@^1.0.16",
-    "@std/assert": "jsr:@std/assert@^1.0.16"
+    "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@deno/gfm": "jsr:@deno/gfm@^0.10.0"
   },
   "compilerOptions": {
     "lib": [
