chore: fix lint issues and update test coverage cleanup

--- a/deno.json
+++ b/deno.json
@@ -39,6 +39,7 @@
     "dev": "deno run -A --watch --env modules/app/main.ts 3000",
     "start": "deno run -A --env modules/app/main.ts 3000",
     "test": "bash ./scripts/test.sh",
+    "lint": "deno lint",
     "cov": "bash ./scripts/test.sh --coverage",
     "bench": "./run_bench.sh",
     "build": "echo 'Building...'"
