--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,9 @@
     "react-dom": "npm:react-dom@^19.2.4",
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "@std/assert": "jsr:@std/assert@^1.0.16",
-    "@deno/gfm": "jsr:@deno/gfm@^0.11.0"
+    "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
+    "esbuild": "npm:esbuild@0.25.3",
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
   },
   "compilerOptions": {
     "lib": [
@@ -36,8 +38,8 @@
   },
   "nodeModulesDir": "auto",
   "tasks": {
-    "dev": "deno run -A --watch --env modules/app/main.ts 3000",
-    "start": "deno run -A --env modules/app/main.ts 3000",
+    "dev": "deno run -A --env build/watch.ts & deno run -A --env --unstable-kv --watch modules/index/main.ts 3000",
+    "start": "deno run -A --env modules/index/main.ts 3000",
     "test": "bash ./scripts/test.sh",
     "lint": "deno lint",
     "cov": "bash ./scripts/test.sh --coverage",
