--- a/deno.json
+++ b/deno.json
@@ -15,6 +15,7 @@
     "react/jsx-runtime": "npm:react@^19.2.4/jsx-runtime",
     "react/jsx-dev-runtime": "npm:react@^19.2.4/jsx-dev-runtime",
     "react-dom": "npm:react-dom@^19.2.4",
+    "react-dom/server": "npm:react-dom@^19.2.4/server",
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "@std/assert": "jsr:@std/assert@^1.0.16",
     "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
