--- a/deno.json
+++ b/deno.json
@@ -20,7 +20,8 @@
     "@std/assert": "jsr:@std/assert@^1.0.16",
     "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
     "esbuild": "npm:esbuild@0.25.3",
-    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
+    "@std/path": "jsr:@std/path@^1.0.8"
   },
   "compilerOptions": {
     "lib": [
