--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,34 @@ on:
     branches:
       - main
 jobs:
+  generate-manifest:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
+      - uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
+      - name: Generate modules manifest
+        run: deno task gen-manifest
+
+      - name: Upload manifest artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: modules-manifest
+          path: |
+            modules/manifest.ts
+            src/modules/manifest.ts
+
   build:
     runs-on: ubuntu-latest
+    needs: generate-manifest
 
     permissions:
       id-token: write
@@ -15,6 +41,12 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+
+      - name: Download manifest artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: modules-manifest
+          path: .
 
       - uses: denoland/setup-deno@v2
         with:
