--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,9 @@ jobs:
       - name: Upload manifest artifact
         uses: actions/upload-artifact@v4
         with:
-          name: modules-manifest
+          name: manifest
           path: |
-            modules/manifest.ts
-            src/modules/manifest.ts
+            manifest.ts
 
   build:
     runs-on: ubuntu-latest
@@ -45,7 +44,7 @@ jobs:
       - name: Download manifest artifact
         uses: actions/download-artifact@v4
         with:
-          name: modules-manifest
+          name: manifest
           path: .
 
       - uses: denoland/setup-deno@v2
