chore: add render middleware tests and update watcher behavior

--- a/deno.json
+++ b/deno.json
@@ -40,7 +40,7 @@
   },
   "nodeModulesDir": "auto",
   "tasks": {
-    "dev": "FASTRO_ENV=development deno run -A scripts/generate_manifest.ts && FASTRO_ENV=development deno run -A build/watch.ts & FASTRO_ENV=development deno run -A --watch app/main.ts 3000",
+    "dev": "FASTRO_ENV=development deno run -A scripts/generate_manifest.ts && FASTRO_ENV=development deno run -A build/watch.ts & FASTRO_ENV=development deno run -A --unstable-kv --watch app/main.ts 3000",
     "start": "deno run -A --env modules/index/main.ts 3000",
     "test": "bash ./scripts/test.sh",
     "lint": "deno lint",
