--- a/deno.json
+++ b/deno.json
@@ -21,7 +21,12 @@
     "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
     "esbuild": "npm:esbuild@0.25.3",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
-    "@std/path": "jsr:@std/path@^1.0.8"
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "tailwindcss": "npm:tailwindcss@^4.1.18",
+    "@tailwindcss/postcss": "npm:@tailwindcss/postcss@^4.1.18",
+    "postcss": "npm:postcss@^8.5.6",
+    "autoprefixer": "npm:autoprefixer@^10.4.23",
+    "cssnano": "npm:cssnano@^7.1.2"
   },
   "compilerOptions": {
     "lib": [
@@ -47,6 +52,7 @@
     "cov": "bash ./scripts/test.sh --coverage",
     "bench": "bash ./scripts/run_bench.sh",
     "gen-manifest": "deno run -A scripts/generate_manifest.ts",
-    "build": "FASTRO_ENV=production deno run -A scripts/generate_manifest.ts && echo 'Build is performed in CI (manifest generated) - use CI to generate client bundles'"
+    "build": "FASTRO_ENV=production deno run -A scripts/generate_manifest.ts && deno task build:css",
+    "build:css": "postcss ./static/css/tailwind.css -o ./public/css/app.css --env production"
   }
 }
