--- a/deno.json
+++ b/deno.json
@@ -19,8 +19,8 @@
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "@std/assert": "jsr:@std/assert@^1.0.16",
     "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
-    "esbuild": "npm:esbuild@0.25.3",
-    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
+    "esbuild": "npm:esbuild@^0.25.5",
+    "@deno/esbuild-plugin": "jsr:@deno/esbuild-plugin@^1.2.1",
     "@std/path": "jsr:@std/path@^1.0.8",
     "tailwindcss": "npm:tailwindcss@^4.1.18",
     "@tailwindcss/postcss": "npm:@tailwindcss/postcss@^4.1.18",
