--- a/deno.json
+++ b/deno.json
@@ -11,6 +11,7 @@
     ".": "./mod.ts"
   },
   "imports": {
+    "@deno/loader": "jsr:@deno/loader@^0.3.10",
     "react": "npm:react@^19.2.4",
     "react/jsx-runtime": "npm:react@^19.2.4/jsx-runtime",
     "react/jsx-dev-runtime": "npm:react@^19.2.4/jsx-dev-runtime",
@@ -19,8 +20,7 @@
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "@std/assert": "jsr:@std/assert@^1.0.16",
     "@deno/gfm": "jsr:@deno/gfm@^0.11.0",
-    "esbuild": "npm:esbuild@^0.25.5",
-    "@deno/esbuild-plugin": "jsr:@deno/esbuild-plugin@^1.2.1",
+    "esbuild": "npm:esbuild@^0.27.3",
     "@std/path": "jsr:@std/path@^1.0.8",
     "tailwindcss": "npm:tailwindcss@^4.1.18",
     "@tailwindcss/postcss": "npm:@tailwindcss/postcss@^4.1.18",
